--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
   "dependencies": {
     "@conform-to/react": "^1.1.5",
     "@conform-to/zod": "^1.1.5",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@epic-web/cachified": "^5.2.0",
     "@epic-web/client-hints": "^1.3.2",
     "@epic-web/invariant": "^1.0.0",
