--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "execa": "^9.3.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
+    "focus-trap-react": "^10.2.3",
+    "framer-motion": "^11.5.4",
     "get-port": "^7.1.0",
     "glob": "^11.0.0",
     "helmet": "^7.1.0",
